# ffm_mpi_distributed_matrix

./: .gitignore  README.md  dependency-reduced-pom.xml  pom.xml
src/main/cpp/: CMakeLists.txt
src/main/cpp/src/: MatrixCalculator.cpp  MatrixCalculator.h
src/main/java/org/distributed/matrix/: FUNCTION_NAMES.java  IIntMatrixCalculator.java  IMatrixCalculator.java  IntMatrixCalculator.java  RunMatrixCalculator.java
src/main/java/org/distributed/matrix/matrix/: Matrix.java
src/main/java/org/distributed/matrix/utils/: OsUtils.java
src/main/java/resources/: matrixA.csv
src/test/java/org/distributed/matrix/: AppTest.java
